# Attention-Mechanism

./: .gitignore  CMakeLists.txt  README.md  build.sh  export_weights.py  validate.py
include/: Attention.hpp  KVCache.hpp  MultiHeadAttention.hpp  Tensor.hpp  TransformerBlock.hpp
src/: main.cpp
